@@ -5,3 +5,4 @@ public class CreatingPostException extends Exception {
     }
 }
 
+//--module-path "javafx-sdk-20.0.2/lib" --add-modules=javafx.controls,javafx.fxml,javafx.graphics,javafx.base
